Added IAM role for lambda service.

--- a/cloudformation/aws-rds-aurora-cf-main.yml
+++ b/cloudformation/aws-rds-aurora-cf-main.yml
@@ -107,6 +107,23 @@ Conditions:
   IsUseDBSnapshot: !Not [!Equals [!Ref DBSnapshotName, '']]
   IsNotUseDBSnapshot: !Not [Condition: IsUseDBSnapshot]
 Resources:
+  LambdaIAMRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          -
+            Effect: "Allow"
+            Principal:
+              Service:
+                - "lambda.amazonaws.com"
+            Action:
+              - "sts:AssumeRole"
+      Path: "/"
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
+        - arn:aws:iam::aws:policy/AmazonRDSFullAccess
   MonitoringIAMRole:
     Type: AWS::IAM::Role
     Properties:
